--- a/app/src/main/res/layout/list_item_recipes.xml
+++ b/app/src/main/res/layout/list_item_recipes.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="10dp">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -9,13 +10,14 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp">
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="10dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation= "vertical">
-        </LinearLayout>
+
 
     <TextView
         android:id="@+id/tv_recipe"
@@ -24,8 +26,24 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
 android:textSize="25sp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:paddingTop="20dp"
+        />
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:id="@+id/recipePicture"
+                android:src="@drawable/nutellapie"
+
+                />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@android:color/darker_gray"></View>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
