--- a/app/src/main/res/layout/list_item_recipes.xml
+++ b/app/src/main/res/layout/list_item_recipes.xml
@@ -1,49 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+
+
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
+    android:layout_gravity="center"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="20dp"
+    android:divider="@android:color/transparent"
+    android:dividerHeight="10dp"
+    android:clipToPadding="false"
+    android:clipChildren="false">
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_gravity="center"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="10dp">
+        android:layout_height="280dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+
+        <TextView
+            android:id="@+id/tv_recipe"
+
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation= "vertical">
-
-
-    <TextView
-        android:id="@+id/tv_recipe"
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-android:textSize="25sp"
-        android:layout_weight="1"
-        android:paddingTop="20dp"
-        />
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:paddingTop="20dp"
+            android:textSize="25sp"
+            android:elevation="10dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintVertical_bias="0.0" />
 
             <ImageView
+                android:id="@+id/recipePicture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
-                android:id="@+id/recipePicture"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
                 android:src="@drawable/nutellapie"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:scaleType="fitStart"
 
-                />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@android:color/darker_gray"></View>
-        </LinearLayout>
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent" />
+
+    </RelativeLayout>
     </android.support.v7.widget.CardView>
 
-</android.support.constraint.ConstraintLayout>
