--- a/app/src/main/res/layout/list_item_ingredients.xml
+++ b/app/src/main/res/layout/list_item_ingredients.xml
@@ -8,4 +8,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv_ingredient" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_quantity" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_measure" />
+
 </android.support.constraint.ConstraintLayout>
