--- a/app/src/main/res/layout/player_main.xml
+++ b/app/src/main/res/layout/player_main.xml
@@ -4,7 +4,8 @@
 <FrameLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/steps_container"
+    android:id="@+id/player_container"
+    android:name="christopher.bakingapp.ui.fragments.PlayerFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:context=".ui.activities.PlayerActivity"></FrameLayout>
 
