fix: Fixed bug that did not allow widget to be shown.

--- a/app/src/main/res/layout/baking_widget_provider.xml
+++ b/app/src/main/res/layout/baking_widget_provider.xml
@@ -1,3 +1,5 @@
+<!-- set layout of widget here -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:orientation="vertical"
