--- a/app/src/main/res/layout/widget_item.xml
+++ b/app/src/main/res/layout/widget_item.xml
@@ -3,18 +3,32 @@
 <!-- set items of listview widget here -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-    android:orientation="vertical"
     android:layout_width="match_parent"
-
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#09C"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/appwidget_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="8dp"
+        android:contentDescription="@string/app_name"
+        android:text="@string/app_name"
+        android:textColor="#ffffff"
+        android:textSize="24sp"
+        android:textStyle="bold|italic" />
 
-        android:id="@+id/item"
-
-        android:layout_width="match_parent"
-
+    <TextView
+        android:id="@+id/appwidget_recipe"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+
+    <ListView
+        android:id="@+id/appwidget_ingredients"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
